<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerCs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/flex_item_shape"
        >
        <ImageView
            android:id="@+id/cir"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:src="@drawable/ic_icon"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <TextView
            android:id="@+id/nickName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/view1"
            app:layout_constraintLeft_toRightOf="@id/cir"
            android:layout_marginStart="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:layout_constraintLeft_toLeftOf="@id/nickName"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            />
       <View
           android:id="@+id/view1"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dp_1"
           app:layout_constraintTop_toTopOf="@id/cir"
           app:layout_constraintBottom_toBottomOf="@id/cir"
           />
        <ImageView
            android:id="@+id/mineRank"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/mine_rank"
            app:layout_constraintTop_toTopOf="@id/cir"
            app:layout_constraintBottom_toBottomOf="@id/cir"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            />
        <TextView
            android:id="@+id/integralText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/integral"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintRight_toLeftOf="@id/rankText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/rankText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            app:layout_constraintBottom_toBottomOf="@id/integralText"
            app:layout_constraintLeft_toRightOf="@id/integralText"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/integralText"
            app:layout_constraintLeft_toLeftOf="@id/integralText"
            app:layout_constraintRight_toRightOf="@id/integralText"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_EB7347"
            />
        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/integral"
            app:layout_constraintLeft_toLeftOf="@id/rankText"
            app:layout_constraintRight_toRightOf="@id/rankText"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_FC9D99"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mineIntegral"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/headerCs"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginTop="@dimen/dp_20"
        >
        <ImageView
            android:id="@+id/img1"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_coin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_integral"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img1"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mineCollect"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/mineIntegral"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/img2"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_collection"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_collect"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img2"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mineShare"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/mineCollect"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/img3"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_share"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_share"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img3"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mineArticle"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/mineShare"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/img4"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_article"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_article"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img4"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mineSet"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/mineArticle"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/img5"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_setting"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_set"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img5"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mineExit"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/mineSet"
        android:background="?android:attr/selectableItemBackground"
        >
        <ImageView
            android:id="@+id/img6"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/logout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/dp_20"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/img6"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_20"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/dp_20"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>